🌐 다국어 지원 강화 및 구조 개선
- 다국어 업데이트:
  - 번역 파일 수정 및 추가: `en-US.json`, `ja-JP.json`, `ko-KR.json`, `zh-CN.json`.
  - `locale_keys.g.dart` 생성으로 번역 키 관리 자동화.
  - `kiosk_langs.tsv` 업데이트로 다국어 지원 강화.

- 구조 개선:
  - `TextTranslateExtension` 추가로 텍스트 유효성 검사 통합.
  - `script.sh`에 로컬라이제이션 파일 생성 명령 추가.

- 디버깅 및 테스트:
  - `KioskComponentsScreen`에서 번역 검증 및 언어 선택 기능 구현.
  - 코드 정리 및 가독성 향상.

--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -1,23 +1,26 @@
 {
-  "main_txt_01": "请扫描二维码上传图片",
+  "main_txt_01_01": "请扫描二维码上传图片",
+  "main_txt_01_02": "请上传图片",
+  "main_txt_01_03": "（前面是随机打印的。）",
   "main_txt_02": "你上传图片了吗？",
   "main_btn_txt": "输入验证码",
   "sub01_txt_01": "上传照片后，请输入发出的验证码。",
+  "sub01_txt_02": "",
   "sub01_btn_done": "完成",
   "alert_title_authNum_error": "验证码错误",
-  "alert_txt_authNum_error": "没有匹配的验证码。\r\n请再检查一次。",
+  "alert_txt_authNum_error": "没有匹配的验证码。\\r\\n请再检查一次。",
   "alert_btn_authNum_error": "返回",
   "sub02_txt_01": "请检查照片卡图像。",
   "sub02_btn_pay": "立即支付",
   "sub03_txt_01": "照片卡正在打印中。请稍候。",
   "sub03_txt_02": "卡片打印大约需要1分钟。",
   "alert_title_print_complete": "打印完成",
-  "alert_txt_print_complete": "您的照片卡已打印！\r\n请检查下面的输出托盘。\r\n谢谢！",
+  "alert_txt_print_complete": "您的照片卡已打印！\\r\\n请检查下面的输出托盘。\\r\\n谢谢！",
   "alert_btn_print_complete": "确定",
   "alert_title_purchase_failure": "支付失败",
-  "alert_txt_purchase_failure": "支付未正常完成。\r\n请再试一次。",
+  "alert_txt_purchase_failure": "支付未正常完成。\\r\\n请再试一次。",
   "alert_btn_purchase_failure": "返回",
   "alert_title_print_failure": "打印失败",
-  "alert_txt_print_failure": "由于打印未正常完成，支付金额将被退还。\r\n如果未退款，请联系管理员。\r\n对给您带来的不便，我们深表歉意。",
-  "alert_btn_print_failure": "确认"
+  "alert_txt_print_failure": "由于打印未正常完成，支付金额将被退还。\\r\\n如果未退款，请联系管理员。\\r\\n对给您带来的不便，我们深表歉意。",
+  "alert_btn_print_failure": "确定"
 }
