🌐 언어 파일 escape 문자 수정 및 설정 업데이트
- 언어 파일에서 불필요한 `\\r\\n`을 `\r\n`으로 변경하여 가독성 및 일관성 개선.
  - 수정된 파일: `en-US.json`, `ja-JP.json`, `ko-KR.json`, `zh-CN.json`.

- VS Code 설정에 `"photocard"` 단어 추가:
  - `"cSpell.words"` 배열에 새로운 단어 추가로 스펠링 검사 효율성 향상.

- 프로젝트의 국제화(i18n) 및 개발 환경 개선.

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -8,19 +8,19 @@
   "sub01_txt_02": "Please enter the issued verification code.",
   "sub01_btn_done": "Done",
   "alert_title_authNum_error": "Verification Code Error",
-  "alert_txt_authNum_error": "There is no matched verification code.\\r\\nPlease check again.",
+  "alert_txt_authNum_error": "There is no matched verification code.\r\nPlease check again.",
   "alert_btn_authNum_error": "Back",
   "sub02_txt_01": "Please check the photo CARD image.",
   "sub02_btn_pay": "Pay Now",
   "sub03_txt_01": "The photo card is being printed. Please wait a moment.",
   "sub03_txt_02": "It takes about 1 minute for the card to print.",
   "alert_title_print_complete": "Print Completed",
-  "alert_txt_print_complete": "Your photo card has been printed!\\r\\nPlease check the output tray below.\\r\\nThank you!",
+  "alert_txt_print_complete": "Your photo card has been printed!\r\nPlease check the output tray below.\r\nThank you!",
   "alert_btn_print_complete": "OK",
   "alert_title_purchase_failure": "Payment Failed",
-  "alert_txt_purchase_failure": "The payment was not completed normally.\\r\\nPlease try again.",
+  "alert_txt_purchase_failure": "The payment was not completed normally.\r\nPlease try again.",
   "alert_btn_purchase_failure": "Back",
   "alert_title_print_failure": "Print Failed",
-  "alert_txt_print_failure": "The payment amount will be refunded\\r\\n because the printout is not done properly.\\r\\n If the refund has not been made, please\\r\\n contact the administrator.\\r\\nWe apologize for the inconvenience \\r\\ncaused to you.",
+  "alert_txt_print_failure": "The payment amount will be refunded\r\n because the printout is not done properly.\r\n If the refund has not been made, please\r\n contact the administrator.\r\nWe apologize for the inconvenience \r\ncaused to you.",
   "alert_btn_print_failure": "OK"
 }
