--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -8,19 +8,19 @@
   "sub01_txt_02": "",
   "sub01_btn_done": "완료",
   "alert_title_authNum_error": "인증번호 오류",
-  "alert_txt_authNum_error": "일치하는 인증번호가 없습니다.\\r\\n다시 확인해 주세요.",
+  "alert_txt_authNum_error": "일치하는 인증번호가 없습니다.\r\n다시 확인해 주세요.",
   "alert_btn_authNum_error": "돌아가기",
   "sub02_txt_01": "포토카드 이미지를 확인해 주세요.",
   "sub02_btn_pay": "결제하기",
   "sub03_txt_01": "포토카드를 출력 중입니다. 잠시만 기다려 주세요.",
   "sub03_txt_02": "카드가 출력되기까지 약 1분 정도의 시간이 소요됩니다.",
   "alert_title_print_complete": "출력 완료",
-  "alert_txt_print_complete": "포토카드 출력이 완료되었습니다.\\r\\n아래 포토카드 받는 곳에서 카드를 받아 가세요.\\r\\n감사합니다.",
+  "alert_txt_print_complete": "포토카드 출력이 완료되었습니다.\r\n아래 포토카드 받는 곳에서 카드를 받아 가세요.\r\n감사합니다.",
   "alert_btn_print_complete": "확인",
   "alert_title_purchase_failure": "결제 실패",
-  "alert_txt_purchase_failure": "결제가 정상적으로 완료되지 않았습니다.\\r\\n다시 시도해 주세요.",
+  "alert_txt_purchase_failure": "결제가 정상적으로 완료되지 않았습니다.\r\n다시 시도해 주세요.",
   "alert_btn_purchase_failure": "돌아가기",
   "alert_title_print_failure": "출력 실패",
-  "alert_txt_print_failure": "출력이 정상적으로 이루어지지 않아 결제 금액이\\r\\n환불됩니다. 환불이 이루어지지 않은 경우,\\r\\n관리자에게 문의해 주시길 바랍니다.\\r\\n이용에 불편을 드려 죄송합니다。",
+  "alert_txt_print_failure": "출력이 정상적으로 이루어지지 않아 결제 금액이\r\n환불됩니다. 환불이 이루어지지 않은 경우,\r\n관리자에게 문의해 주시길 바랍니다.\r\n이용에 불편을 드려 죄송합니다。",
   "alert_btn_print_failure": "확인"
 }
