🔧 문구 수정 및 null 문자열 인쇄 문제 해결
**Why:**
- 결제 실패 시 버튼 텍스트가 사용자 경험에 적절하지 않음.
- 개발 환경에서만 표시되는 에러 메시지가 실제 운영 환경에서도 보일 가능성이 있음.
- 인쇄 시 null 문자열이 출력되는 문제가 발생.

**What:**
- `ko-KR.json`: 결제 실패 버튼 텍스트를 '돌아가기'에서 '확인'으로 변경.
- `DialogHelper`: 결제 실패 및 인쇄 실패 다이얼로그에서 불필요한 예외 메시지 제거.
- `DialogHelper`: null 문자열이 출력되는 문제 수정.

**Tags:**

--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -19,7 +19,7 @@
   "alert_btn_print_complete": "확인",
   "alert_title_purchase_failure": "결제 실패",
   "alert_txt_purchase_failure": "결제가 정상적으로 완료되지 않았습니다.\r\n결제 수단을 확인하거나 홈으로 이동해 주세요.",
-  "alert_btn_purchase_failure": "돌아가기",
+  "alert_btn_purchase_failure": "확인",
   "alert_title_print_failure": "출력 실패",
   "alert_txt_print_failure": "출력이 정상적으로 이루어지지 않아 결제 금액이\r\n환불됩니다. 환불이 이루어지지 않은 경우,\r\n관리자에게 문의해 주시길 바랍니다.\r\n이용에 불편을 드려 죄송합니다.",
   "alert_btn_print_failure": "확인"
