--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -14,6 +14,7 @@
   "sub02_btn_pay": "결제하기",
   "sub03_txt_01": "포토카드를 출력 중입니다. 잠시만 기다려 주세요.",
   "sub03_txt_02": "카드가 출력되기까지 약 1분 정도의 시간이 소요됩니다.",
+  "sub03_txt_03": "출력 중에 카드를 빼지 마세요.",
   "alert_title_print_complete": "출력 완료",
   "alert_txt_print_complete": "포토카드 출력이 완료되었습니다.\r\n아래 포토카드 받는 곳에서 카드를 받아 가세요.\r\n감사합니다.",
   "alert_btn_print_complete": "확인",
