feat: 안내 문구 수정
'앞면은 랜덤으로 출력됩니다' 문구에 괄호제거 앞에 *추가

Tags: #ui, #translate

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -1,7 +1,7 @@
 {
   "main_txt_01_01": "Please select or upload the image",
   "main_txt_01_02": "on the back through the QR code.",
-  "main_txt_01_03": "(The front is randomly printed.)",
+  "main_txt_01_03": "*The front is randomly printed.",
   "main_txt_02": "Did you upload the image?",
   "main_btn_txt": "Enter Verification Code",
   "sub01_txt_01": "After uploading the photo",
