--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "main_txt_01_01": "请扫描二维码上传图片",
   "main_txt_01_02": "请上传图片",
-  "main_txt_01_03": "（前面是随机打印的。）",
+  "main_txt_01_03": "*前面是随机打印的。",
   "main_txt_02": "你上传图片了吗？",
   "main_btn_txt": "输入验证码",
   "sub01_txt_01": "上传照片后，请输入发出的验证码。",
