--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -1,7 +1,7 @@
 {
   "main_txt_01_01": "QRコードで裏面の画像を選択",
   "main_txt_01_02": "またはアップロードしてください。",
-  "main_txt_01_03": "（前面はランダムに出力されます。）",
+  "main_txt_01_03": "*前面はランダムに出力されます。",
   "main_txt_02": "画像のアップロードは完了しましたか？",
   "main_btn_txt": "認証番号を入力する",
   "sub01_txt_01": "写真をアップロード後、",
