--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -1,7 +1,7 @@
 {
   "main_txt_01_01": "QR코드를 통해 뒷면 이미지를",
   "main_txt_01_02": "선택 또는 업로드 해주세요.",
-  "main_txt_01_03": "(앞면은 랜덤으로 출력됩니다.)",
+  "main_txt_01_03": "*앞면은 랜덤으로 출력됩니다.",
   "main_txt_02": "이미지 업로드를 완료했나요?",
   "main_btn_txt": "인증번호 입력하기",
   "sub01_txt_01": "사진 업로드 후 발급된 인증번호를 입력해 주세요.",
