--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -23,6 +23,8 @@
   "alert_txt_purchase_failure": "The payment was not completed normally.\r\nPlease try again.",
   "alert_btn_purchase_failure": "Back",
   "alert_title_print_failure": "Print Failed",
+  "alert_title_card_refill": "Card refill required",
   "alert_txt_print_failure": "The payment amount will be refunded\r\n because the printout is not done properly.\r\n If the refund has not been made, please\r\n contact the administrator.\r\nWe apologize for the inconvenience \r\ncaused to you.",
+  "alert_txt_card_refill": "The card balance is insufficient.\r\n For smooth use, please contact the administrator\r\n and proceed with replacement.",
   "alert_btn_print_failure": "OK"
 }
