--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -23,6 +23,8 @@
   "alert_txt_purchase_failure": "購入が正常に完了しませんでした。\r\n再度お試しください。",
   "alert_btn_purchase_failure": "戻る",
   "alert_title_print_failure": "印刷失敗",
+  "alert_title_card_refill": "カード詰め替えが必要",
   "alert_txt_print_failure": "印刷が正常に行われず、支払い金額は\r\n返金されます。返金が行われない場合は、\r\n管理者にお問い合わせください。\r\nご迷惑をおかけして申し訳ありません。",
+  "alert_txt_card_refill": "カード残量が足りません。\r\n円滑な使用のために管理者に連絡した後\r\n交換を進めてください。",
   "alert_btn_print_failure": "確認"
 }
