feat : 승인번호가 빈 카드 건에 대한 처리 - 카드 승인 번호가 빈 결제 처리 상태를 가지는 payment_failure_provider 추가 - 카드 승인 번호가 빈 결제 처리 로직 추가 - 결제 불가 카드 다어얼로그 추가 - 카드 승인 번호가 빈 결제 발생 시 홈화면 이동 - 카드 승인 번호가 빈 결제 발생 시 SlackError 알람 - 버전 표시 변경 v2.4.6h

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -22,6 +22,9 @@
   "alert_title_purchase_failure": "Payment Failed",
   "alert_txt_purchase_failure": "The payment was not completed normally.\r\nPlease try again.",
   "alert_btn_purchase_failure": "Back",
+  "alert_title_paymentcard_failure": "Card Not Available",
+  "alert_txt_paymentcard_failure": "This card is not valid.\r\nPlease use another card.",
+  "alert_btn_paymentcard_failure": "OK",
   "alert_title_print_failure": "Print Failed",
   "alert_title_card_refill": "Card refill required",
   "alert_txt_print_failure": "The payment amount will be refunded\r\n because the printout is not done properly.\r\n If the refund has not been made, please\r\n contact the administrator.\r\nWe apologize for the inconvenience \r\ncaused to you.",
