--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -22,6 +22,9 @@
   "alert_title_purchase_failure": "결제 실패",
   "alert_txt_purchase_failure": "결제가 정상적으로 완료되지 않았습니다.\r\n결제 수단을 확인하거나 홈으로 이동해 주세요.",
   "alert_btn_purchase_failure": "확인",
+  "alert_title_paymentcard_failure": "결제 불가 카드",
+  "alert_txt_paymentcard_failure": "사용이 불가능한 카드입니다.\r\n다른 카드를 이용해 주세요.",
+  "alert_btn_paymentcard_failure": "확인",
   "alert_title_print_failure": "출력 실패",
   "alert_title_card_refill": "카드 리필 필요",
   "alert_txt_print_failure": "출력이 정상적으로 이루어지지 않아 결제 금액이\r\n환불됩니다. 환불이 이루어지지 않은 경우,\r\n관리자에게 문의해 주시길 바랍니다.\r\n이용에 불편을 드려 죄송합니다.",
