--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -21,6 +21,9 @@
   "alert_title_purchase_failure": "支付失败",
   "alert_txt_purchase_failure": "支付未正常完成。\r\n请再试一次。",
   "alert_btn_purchase_failure": "返回",
+  "alert_title_paymentcard_failure": "无法使用卡付款",
+  "alert_txt_paymentcard_failure": "此卡无法使用。\r\n\n请使用另一张卡。",
+  "alert_btn_paymentcard_failure": "确定",
   "alert_title_print_failure": "打印失败",
   "alert_title_card_refill": "需要充值卡",
   "alert_txt_print_failure": "由于打印未正常完成，支付金额将被退还。\r\n如果未退款，请联系管理员。\r\n对给您带来的不便，我们深表歉意。",
