--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -22,6 +22,9 @@
   "alert_title_purchase_failure": "購入失敗",
   "alert_txt_purchase_failure": "購入が正常に完了しませんでした。\r\n再度お試しください。",
   "alert_btn_purchase_failure": "戻る",
+  "alert_title_paymentcard_failure": "お支払い不可カード",
+  "alert_txt_paymentcard_failure": "使用できないカードです。\r\n別のカードをご利用ください。",
+  "alert_btn_paymentcard_failure": "確認",
   "alert_title_print_failure": "印刷失敗",
   "alert_title_card_refill": "カード詰め替えが必要",
   "alert_txt_print_failure": "印刷が正常に行われず、支払い金額は\r\n返金されます。返金が行われない場合は、\r\n管理者にお問い合わせください。\r\nご迷惑をおかけして申し訳ありません。",
