feat: 인증번호 만료 케이스 추가  - 기존 인증번호 만료 시간 72시간 -> 당일로 변경  - 인증번호 만료 시 새로운 다이얼로그 표시

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -10,6 +10,9 @@
   "alert_title_authNum_error": "Verification Code Error",
   "alert_txt_authNum_error": "There is no matched verification code.\r\nPlease check again.",
   "alert_btn_authNum_error": "Back",
+  "alert_title_verification_code_expried": "Verification Code Expired",
+  "alert_txt_verification_code_expried": "Your verification code has expired.\nPlease request a new verification code and try again.",
+  "alert_btn_verification_code_expried": "OK",
   "sub02_txt_01": "Please check the photo CARD image.",
   "sub02_btn_pay": "Pay Now",
   "sub03_txt_01": "The photo card is being printed. Please wait a moment.",
