--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -10,6 +10,9 @@
   "alert_title_authNum_error": " 認証番号エラー",
   "alert_txt_authNum_error": "一致する認証番号がありません。\r\nもう一度確認をお願いします。",
   "alert_btn_authNum_error": "帰る",
+  "alert_title_verification_code_expried": "認証コードの有効期限切れ",
+  "alert_txt_verification_code_expried": "認証コードの有効期限が切れました。\n新しい認証コードを取得して、再度お試しください。",
+  "alert_btn_verification_code_expried": "確認",
   "sub02_txt_01": "フォトカードの画像を確認してください。",
   "sub02_btn_pay": "決済する",
   "sub03_txt_01": "フォトカードを出力中です。 少々お待ちください.",
