--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -10,6 +10,9 @@
   "alert_title_authNum_error": "인증번호 오류",
   "alert_txt_authNum_error": "일치하는 인증번호가 없습니다.\r\n다시 확인해 주세요.",
   "alert_btn_authNum_error": "돌아가기",
+  "alert_title_verification_code_expried": "인증번호 만료",
+  "alert_txt_verification_code_expried": "인증번호가 만료되었습니다.\n인증번호를 새로 발급받은 뒤 다시 시도해 주세요.",
+  "alert_btn_verification_code_expried": "확인",
   "sub02_txt_01": "포토카드 이미지를 확인해 주세요.",
   "sub02_btn_pay": "결제하기",
   "sub03_txt_01": "포토카드를 출력 중입니다. 잠시만 기다려 주세요.",
