--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -10,6 +10,9 @@
   "alert_title_authNum_error": "验证码错误",
   "alert_txt_authNum_error": "没有匹配的验证码。\r\n请再检查一次。",
   "alert_btn_authNum_error": "返回",
+  "alert_title_verification_code_expried": "验证码已过期",
+  "alert_txt_verification_code_expried": "您的验证码已过期。\n请重新获取验证码后再试一次。",
+  "alert_btn_verification_code_expried": "确认",
   "sub02_txt_01": "请检查照片卡图像。",
   "sub02_btn_pay": "立即支付",
   "sub03_txt_01": "照片卡正在打印中。请稍候。",
