feat: 자동 환불 시 알럿 추가 - 자동 환불 전 알럿으로 환불에 대한 안내 추가

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -43,6 +43,8 @@
   "alert_btn_authNum_reissue_failure": "OK",
   "alert_title_refund_info": "Refund Notice",
   "alert_txt_refund_info": "There are transactions that haven’t\r\nbeen refunded.\r\nPlease insert the previously used card\r\ninto the terminal and proceed with the refund.",
+  "alert_title_auto_refund_alert": "Refund Notice",
+  "alert_txt_auto_refund_alert": "The printer is not working properly.\r\nA refund will be processed.",
   "alert_btn_cancel": "Cancel",
   "alert_btn_ok": "OK"
 }
