--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -43,6 +43,8 @@
   "alert_btn_authNum_reissue_failure": "確認",
   "alert_title_refund_info": "返金のお知らせ",
   "alert_txt_refund_info": "まだ返金が完了していない取引があります。\r\n以前に使用したカードを端末に挿入した後\r\n払い戻しを行ってください。",
+  "alert_title_auto_refund_alert": "返金のお知らせ",
+  "alert_txt_auto_refund_alert": "プリンターが正常に動作しないため\r\n返金を進めます。",
   "alert_btn_cancel": "キャンセル",
   "alert_btn_ok": "確認"
 }
