feat: - QR코드 상단 텍스트 수정

--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -1,6 +1,6 @@
 {
-  "main_txt_01_01": "QR코드를 통해 뒷면 이미지를",
-  "main_txt_01_02": "선택 또는 업로드 해주세요.",
+  "main_txt_01_01": "QR코드를 카메라로 스캔하여",
+  "main_txt_01_02": "뒷면 이미지 선택 후 인증번호를 받으세요.",
   "main_txt_01_03": "*앞면은 랜덤으로 출력됩니다.",
   "main_txt_02": "이미지 업로드를 완료했나요?",
   "main_btn_txt": "인증번호 입력하기",
