--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -1,6 +1,6 @@
 {
-  "main_txt_01_01": "カメラでQRコードをスキャンして、",
-  "main_txt_01_02": "裏面の画像を選択し、認証コードを受け取ってください.",
+  "main_txt_01_01": "请扫描二维码上传图片",
+  "main_txt_01_02": "请上传图片",
   "main_txt_01_03": "*前面是随机打印的。",
   "main_txt_02": "你上传图片了吗？",
   "main_btn_txt": "输入验证码",
