--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -13,8 +13,8 @@
   "alert_title_verification_code_expried": "Verification Code Expired",
   "alert_txt_verification_code_expried": "Your verification code has expired.\nPlease request a new verification code and try again.",
   "alert_btn_verification_code_expried": "OK",
-  "sub02_txt_01": "Please check the photo CARD image.",
-  "sub02_btn_pay": "Pay Now",
+  "sub02_txt_01": "Please check your photocard image.",
+  "sub02_btn_pay": "Pay",
   "sub03_txt_01": "The photo card is being printed. Please wait a moment.",
   "sub03_txt_02": "It takes about 1 minute for the card to print.",
   "sub03_txt_03": "Don't pick the card until the output is completed!",
@@ -47,5 +47,17 @@
   "alert_txt_auto_refund_alert": "The printer is not working properly.\r\nA refund will be processed.",
   "alert_btn_cancel": "Cancel",
   "alert_btn_ok": "OK",
-  "alert_title_empty_event": "Enter the kiosk devic\nnumber to run the event."
+  "alert_title_empty_event": "Enter the kiosk devic\nnumber to run the event.",
+  "choice_recommended_images": "Recommended images",
+  "choice_select_recommended_image": "Please select a recommended image.",
+  "choice_upload_my_photo": "Upload my photo",
+  "choice_select_and_print": "Select & Print",
+  "choice_step1_qr_upload": "STEP 1. Scan QR & Upload",
+  "choice_step2_enter_code_print": "STEP 2. Enter code & Print",
+  "choice_select_image": "Select an image",
+  "choice_select_back_image": "Select a back image",
+  "choice_enter_code": "Enter code",
+  "choice_enter_verification_code": "Enter verification code",
+  "print_takes_one_minute": "Printing takes about 1 minute.",
+  "currency_won": "KRW"
 }
