--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -14,7 +14,7 @@
   "alert_txt_verification_code_expried": "認証コードの有効期限が切れました。\n新しい認証コードを取得して、再度お試しください。",
   "alert_btn_verification_code_expried": "確認",
   "sub02_txt_01": "フォトカードの画像を確認してください。",
-  "sub02_btn_pay": "決済する",
+  "sub02_btn_pay": "お支払い",
   "sub03_txt_01": "フォトカードを出力中です。 少々お待ちください.",
   "sub03_txt_02": "カードが出力されるまで約1分程度の時間がかかります。",
   "sub03_txt_03": "出力が完了するまでカードを抜かないでください！",
@@ -47,5 +47,17 @@
   "alert_txt_auto_refund_alert": "プリンターが正常に動作しないため\r\n返金を進めます。",
   "alert_btn_cancel": "キャンセル",
   "alert_btn_ok": "確認",
-  "alert_title_empty_event": "イベントを実行するには、\nキオスクの機器番号を入力してください。"
+  "alert_title_empty_event": "イベントを実行するには、\nキオスクの機器番号を入力してください。",
+  "choice_recommended_images": "おすすめ画像選択",
+  "choice_select_recommended_image": "おすすめ画像を選択してください。",
+  "choice_upload_my_photo": "写真をアップロード",
+  "choice_select_and_print": "画像を選択後、すぐに印刷",
+  "choice_step1_qr_upload": "STEP 1. QR読取→アップロード",
+  "choice_step2_enter_code_print": "STEP 2. 認証番号入力→印刷",
+  "choice_select_image": "画像を選択",
+  "choice_select_back_image": "裏面画像を選択",
+  "choice_enter_code": "認証番号を入力",
+  "choice_enter_verification_code": "認証番号を入力",
+  "print_takes_one_minute": "印刷には約1分かかります。",
+  "currency_won": "ウォン"
 }
