feat: 타임아웃/네트워크 알럿 연동 및 홈 타임아웃 타이머 로직 정리 - 네트워크 알럿 표시 전 타임아웃 타이머 취소 및 타임아웃 알럿 선닫기 - 네트워크 알럿 확인 시 상태 재검사 후 미연결 시 알럿 재표시 - 네트워크 알럿 닫힐 때 타임아웃 타이머 resumeTimer로 초기화 - 타임아웃 알럿은 다른 알럿이 없을 때만 자동 닫기·홈 이동 - HomeTimeoutNotifier: cancelTimerWithCallback 추가, dispose 시 콜백까지 정리 - app 내 타임아웃 관련 호출을 cancelTimerWithCallback로 통일

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -47,6 +47,13 @@
   "alert_txt_auto_refund_alert": "The printer is not working properly.\r\nA refund will be processed.",
   "alert_btn_cancel": "Cancel",
   "alert_btn_ok": "OK",
+  "alert_btn_go_to_home": "Go to Home",
+  "alert_txt_card_limit_exceeded": "Card limit exceeded.",
+  "alert_txt_insufficient_balance": "Insufficient balance.",
+  "alert_txt_verification_error": "Card authentication failed.",
+  "alert_txt_timeout_payment": "Payment timed out.",
+  "alert_txt_merchant_restriction": "This card can't be used at this merchant.",
+  "alert_txt_timeout_to_home": "No activity detected.\n Returning to the Home screen in {} seconds.",
   "alert_title_empty_event": "Enter the kiosk devic\nnumber to run the event.",
   "choice_recommended_images": "Recommended images",
   "choice_select_recommended_image": "Please select a recommended image.",
