--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -47,6 +47,13 @@
   "alert_txt_auto_refund_alert": "プリンターが正常に動作しないため\r\n返金を進めます。",
   "alert_btn_cancel": "キャンセル",
   "alert_btn_ok": "確認",
+  "alert_btn_go_to_home": "ホームへ",
+  "alert_txt_card_limit_exceeded": "カードの利用限度額を超えています。",
+  "alert_txt_insufficient_balance": "残高が不足しています。",
+  "alert_txt_verification_error": "カード認証に失敗しました。",
+  "alert_txt_timeout_payment": "決済がタイムアウトしました。",
+  "alert_txt_merchant_restriction": "この加盟店ではご利用いただけません。",
+  "alert_txt_timeout_to_home": "一定時間操作がないため、\n{}秒後にホーム画面へ戻ります。",
   "alert_title_empty_event": "イベントを実行するには、\nキオスクの機器番号を入力してください。",
   "choice_recommended_images": "おすすめ画像選択",
   "choice_select_recommended_image": "おすすめ画像を選択してください。",
