--- a/assets/lang/zh-CN.json
+++ b/assets/lang/zh-CN.json
@@ -46,6 +46,13 @@
   "alert_txt_auto_refund_alert": "由于打印机无法正常工作，\\r\\n将进行退款。",
   "alert_btn_cancel": "返回",
   "alert_btn_ok": "确定",
+  "alert_btn_go_to_home": "返回首页",
+  "alert_txt_card_limit_exceeded": "卡限额已超。",
+  "alert_txt_insufficient_balance": "余额不足。",
+  "alert_txt_verification_error": "卡认证失败。",
+  "alert_txt_timeout_payment": "支付超时。",
+  "alert_txt_merchant_restriction": "此卡无法在此商户使用。",
+  "alert_txt_timeout_to_home": "检测到无活动。\n{}秒后返回首页。",
   "alert_title_empty_event": "请输入设备编号以运行事件。",
   "choice_recommended_images": "推荐图片选择",
   "choice_select_recommended_image": "请选择推荐图片。",
