--- a/assets/lang/ko-KR.json
+++ b/assets/lang/ko-KR.json
@@ -47,6 +47,13 @@
   "alert_txt_auto_refund_alert": "프린터가 정상 작동하지 않아\r\n환불을 진행합니다.",
   "alert_btn_cancel": "취소",
   "alert_btn_ok": "확인",
+  "alert_btn_go_to_home": "홈으로 이동",
+  "alert_txt_card_limit_exceeded": "카드 한도가 초과되었습니다.",
+  "alert_txt_insufficient_balance": "카드 잔액이 부족합니다.",
+  "alert_txt_verification_error": "카드 인증에 실패했습니다.",
+  "alert_txt_timeout_payment": "결제 시간이 초과되었습니다.",
+  "alert_txt_merchant_restriction": "해당 가맹점에서 사용할 수 없습니다.",
+  "alert_txt_timeout_to_home": "일정 시간 동안 사용이 없어\n {}초 후 홈 화면으로 이동합니다.",
   "alert_title_empty_event": "이벤트를 실행하려면\n키오스크 기기번호를 입력해 주세요.",
   "choice_recommended_images": "추천 이미지 선택",
   "choice_select_recommended_image": "추천 이미지 선택하기",
