feat: - 출력 화면 Localization 정의의

--- a/assets/lang/ja-JP.json
+++ b/assets/lang/ja-JP.json
@@ -15,9 +15,9 @@
   "alert_btn_verification_code_expried": "確認",
   "sub02_txt_01": "フォトカードの画像を確認してください。",
   "sub02_btn_pay": "お支払い",
-  "sub03_txt_01": "フォトカードを出力中です。 少々お待ちください.",
-  "sub03_txt_02": "カードが出力されるまで約1分程度の時間がかかります。",
-  "sub03_txt_03": "出力が完了するまでカードを抜かないでください！",
+  "sub03_txt_01": "フォトカードを印刷中です。しばらくお待ちください。",
+  "sub03_txt_02": "印刷には約1分かかります。",
+  "sub03_txt_03": "印刷が完了するまでカードを引き抜かないでください！",
   "alert_title_print_complete": "出力完了",
   "alert_txt_print_complete": "フォトカードの出力が完了しました。\r\n下のフォトカード\r\nを受け取るところからカードを受け取ってください。\r\nありがとうございます。",
   "alert_txt_print_complete_02": "3秒後に自動的にポップアップが終了します。",
