--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -15,9 +15,9 @@
   "alert_btn_verification_code_expried": "OK",
   "sub02_txt_01": "Please check your photocard image.",
   "sub02_btn_pay": "Pay",
-  "sub03_txt_01": "The photo card is being printed. Please wait a moment.",
-  "sub03_txt_02": "It takes about 1 minute for the card to print.",
-  "sub03_txt_03": "Don't pick the card until the output is completed!",
+  "sub03_txt_01": "Printing your photocard. Please wait.",
+  "sub03_txt_02": "Printing takes about 1 minute.",
+  "sub03_txt_03": "Please do not pull out the card until printing is complete!",
   "alert_title_print_complete": "Print Completed",
   "alert_txt_print_complete": "Your photo card has been printed!\r\nPlease check the output tray below.\r\nThank you!",
   "alert_txt_print_complete_02": "The popup will be closed automatically after 3 seconds.",
